# arxi

./: .env.example  .gitignore  README.md  SKILL.md  docker-compose.yml  justfile
backend/: Dockerfile  agents.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1582b3a228fd_initial_schema.py  a3f7c1d92e4b_add_clinical_review_fields.py  b5e2f8a31c07_add_patient_clinical_and_rx_findings.py
backend/arxi/: config.py  database.py  events.py  main.py  worker.py  ws.py
backend/arxi/agents/: intake_agent.py  registry.py
backend/arxi/auth/: middleware.py  models.py  router.py  schemas.py  service.py
backend/arxi/modules/compliance/: models.py  router.py  schemas.py  service.py
backend/arxi/modules/drug/: models.py  router.py  schemas.py  service.py
backend/arxi/modules/intake/: clinical_review.py  models.py  parser.py  router.py  schemas.py  service.py
backend/arxi/ocr/: engine.py
backend/fixtures/: sample_newrx.xml
backend/scripts/: seed.py
backend/tests/: conftest.py  test_events.py  test_health.py  test_ws.py
backend/tests/test_agents/: test_intake_agent.py  test_registry.py
backend/tests/test_auth/: test_auth_router.py  test_rbac.py  test_token_endpoint.py
backend/tests/test_compliance/: test_audit.py  test_audit_router.py  test_audit_service.py
backend/tests/test_intake/: test_parser.py  test_router.py  test_router_errors.py  test_service.py  test_state_guards.py  test_worker.py
backend/tests/test_ocr/: test_engine.py
backend/tests/test_patient/: test_matcher.py  test_normalization.py  test_router.py  test_service.py
(+41 files in other folders)
